fix(pill): vertically align icon and text pills
Without this, when a pill with an icon is used next
to a pill that is only text, the icon pill will
render slightly higher than the text-only pill.

--- a/packages/pharos/src/components/pill/pill.scss
+++ b/packages/pharos/src/components/pill/pill.scss
@@ -51,6 +51,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  align-self: baseline; // aligns text properly when there is an icon
 }
 
 .pill__close {
